rename the module to 'libao'
Signed-off-by: Ezequiel Garcia <ezequiel@vanguardiasur.com.ar>

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ao",
+  "name": "libao",
   "description": "Binding to libao",
   "keywords": [
-    "ao",
+    "libao",
     "pcm",
     "audio",
     "sound",
